Time: 6 ms (47.50%), Space: 43.4 MB (31.88%) - LeetHub